--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title className="title">Fundamental of Robotics Education Project</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <title style="text-align:center">Fundamental of Robotics Education Project</title>
+    <style>
+        body {background-color: powderblue;}
+        h1   {color: blue;
+              text-align:center;}
+        h2    {text-align: center;
+               color: black; }
+        </style>
 </head>
 <body>
-    <h1>Computer Science 426: Senior Porjects in Computer Science Spring 2023 at the University of Nevada, Reno </h1>
+    <h1 style="color:blue">Computer Science 426: Senior Porjects in Computer Science Spring 2023 at the University of Nevada, Reno </h1>
     <img src="unr.png" alt="unr logo">
     <h2>We are team 29 and our project name is FORE: Fundamentals of robotics education. Our team consists of Jenavieve Layosa, Ilana Macy, Henry Dalton, and Andrew DeBolt.</h2>
     <h2>Instructors: Vinh Le, Devrin Lee, Sara Davis<h2>
@@ -16,7 +22,7 @@
         Student-Centered Personalized Learning Framework to Advance Undergraduate
         
     <h2>Robotics Education. NSF, Federal. Award #DUE-2142360</h2></h2></h2>
-    
+
     <h2>Our project is an educational website called FORE for Fundamentals Of Robotics
         Education; an interactive learning website designed to teach robotics programming fundamentals
         using ROS to students at a high school to undergraduate level. The goal is to make robotics
