--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundamental of Robotics Education Project</title>
     <style>
-        body {background-color: powderblue;}
-        h1   {color: blue;}
-        h2    {text-align: center;}
+        body {background-color: lightgray;}
+        h1   {text-align:center; color: blue;}
+        h2   {text-align: center;}
         </style>
 </head>
 <body>
