again how to center a pic

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <h1>Computer Science 426: Senior Projects in Computer Science Spring 2023 at the University of Nevada, Reno </h1>
     <img src="unr.png" alt="unr logo">
-    <h2>We are team 29 and our project name is FORE: Fundamentals of robotics education. Our team consists of Jenavieve Layosa, Ilana Macy, Henry Dalton, and Andrew DeBolt.</h2>
+    <h2>We are team 29 and our project name is FORE: Fundamentals of Robotics Education. Our team consists of Jenavieve Layosa, Ilana Macy, Henry Dalton, and Andrew DeBolt.</h2>
     <h2>Instructors: Vinh Le, Devrin Lee, Sara Davis<h2>
 
         External Advisors: Hossein Jamali - Graduate Student Advisor working on A
