--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Fundamental of Robotics Education Project</title>
     <style>
         body {background-color: lightgray;}
-        h1   {text-align:center; color: blue;}
-        h2   {text-align: center;}
+        h1   {text-align:center; color: blue; font-size:large;}
+        h2   {text-align: center; font-size: medium;}
         </style>
 </head>
 <body>
     <h1>Computer Science 426: Senior Projects in Computer Science Spring 2023 at the University of Nevada, Reno </h1>
-    <img src="unr.png" alt="unr logo">
+    <img src="unr.png" alt="unr logo" class="center">
     <h2>We are team 29 and our project name is FORE: Fundamentals of Robotics Education. Our team consists of Jenavieve Layosa, Ilana Macy, Henry Dalton, and Andrew DeBolt.</h2>
     <h2>Instructors: Vinh Le, Devrin Lee, Sara Davis<h2>
 
