--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Fundamental of Robotics Education Project</title>
     <style>
         body {background-color: lightgray;}
-        h1   {text-align:center; color: blue; font-size:large;}
-        h2   {text-align: center; font-size: medium;}
+        h1   {text-align:center; color: darkblue; font-size:50px;}
+        h2   {text-align: center; font-size: 35px;}
         </style>
 </head>
 <body>
