--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
         body {background-color: lightgray;}
         h1   {text-align:center; color: darkblue; font-size:50px;}
         h2   {text-align: center; font-size: 35px;}
+        
         </style>
 </head>
 <body>
     <h1>Computer Science 426: Senior Projects in Computer Science Spring 2023 at the University of Nevada, Reno </h1>
-    <img src="unr.png" alt="unr logo" class="center">
+    <p style="text-align: center"><img src="unr.png" alt="unr logo"> </p>
     <h2>We are team 29 and our project name is FORE: Fundamentals of Robotics Education. Our team consists of Jenavieve Layosa, Ilana Macy, Henry Dalton, and Andrew DeBolt.</h2>
     <h2>Instructors: Vinh Le, Devrin Lee, Sara Davis<h2>
 
