--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <h1>Computer Science 426: Senior Projects in Computer Science Spring 2023 at the University of Nevada, Reno </h1>
-    <img src="unr.png" alt="unr logo" class="centerImg">
+    <img src="unr.png" alt="unr logo" style="text-align:center; display:block;">
     <h2>We are team 29 and our project name is FORE: Fundamentals of Robotics Education. Our team consists of Jenavieve Layosa, Ilana Macy, Henry Dalton, and Andrew DeBolt.</h2>
     <h2>This about page is different that the one that will end up in the final version of our project. Since our website is not currently hosted we decided to use github pages to create this assignment with the knowledge that it will later change.</h2>
     <h2>Instructors: Vinh Le, Devrin Lee, Sara Davis<h2>
