--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         body {background-color: lightgray;}
         h1   {text-align:center; color: darkblue; font-size:50px;}
         h2   {text-align: center; font-size: 35px;}
+        h3   {text-align: center; font-size: 30px;}
+        h4   {text-align: center; font-size: 25px;}
         
     </style>
 </head>
@@ -17,7 +19,7 @@
     
     <h2>We are team 29 and our project name is FORE: Fundamentals of Robotics Education. Our team consists of Jenavieve Layosa, Ilana Macy, Henry Dalton, and Andrew DeBolt.</h2>
     <div style="text-align:center;"><img src="unr.png" alt="unr logo"></div>
-    <h2>This about page is different that the one that will end up in the final version of our project. Since our website is not currently hosted we decided to use github pages to create this assignment with the knowledge that it will later change.</h2>
+    <h4>This about page is different that the one that will end up in the final version of our project. Since our website is not currently hosted we decided to use github pages to create this assignment with the knowledge that it will later change.</h4>
     <h2>Instructors: Vinh Le, Devrin Lee, Sara Davis<h2>
 
         External Advisors: Hossein Jamali - Graduate Student Advisor working on A
